# api/docs/swagger.json
@@ -265,7 +265,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/sale.GetProductByIdResponse"
+                            "$ref": "#/definitions/sale.GetFeedbackOfUserResponse"
                         }
                     },
                     "401": {
@@ -308,7 +308,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/sale.GetProductByIdResponse"
+                            "$ref": "#/definitions/sale.GetFeedbackResponse"
                         }
                     },
                     "400": {
@@ -1470,9 +1470,6 @@
         },
         "models.LimitOfProductRequest": {
             "type": "object",
-            "required": [
-                "limit_of_product"
-            ],
             "properties": {
                 "limit_of_product": {
                     "type": "integer"
@@ -1591,6 +1588,59 @@
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/models.WishList"
+                    }
+                }
+            }
+        },
+        "sale.FeedbackOfProduct": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "rating": {
+                    "type": "integer"
+                },
+                "user_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "sale.FeedbackOfUser": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "product_id": {
+                    "type": "string"
+                },
+                "rating": {
+                    "type": "integer"
+                }
+            }
+        },
+        "sale.GetFeedbackOfUserResponse": {
+            "type": "object",
+            "properties": {
+                "feedbacks": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/sale.FeedbackOfUser"
+                    }
+                }
+            }
+        },
+        "sale.GetFeedbackResponse": {
+            "type": "object",
+            "properties": {
+                "average_rating": {
+                    "type": "number"
+                },
+                "feedbacks": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/sale.FeedbackOfProduct"
                     }
                 }
             }
